k8s/services.yml

apiVersion: v1
kind: Service
metadata:
  name: verirag-fastapi-service
  namespace: verirag
 
spec:
  type: ClusterIP        
  selector:
    app: verirag-backend
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: verirag-streamlit-service
  namespace: verirag

spec:
  type: ClusterIP          
  selector:
    app: verirag-frontend
  ports:
    - port: 8501
      targetPort: 8501
